Fixed responsive title on phone and overflow

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ header{
   text-align: center;
   height: 450px;
   padding: 30px 0;
+  overflow: hidden;
 }
 
 .pink-hero,h1,#purple-hero{
@@ -107,15 +108,15 @@ header{
 
 #purple-hero{
   color:var(--zombie-pink-2);
-  font-size: 1.1rem;
+  font-size: 3.5vw;
   margin: 10px;
 }
 
 h1{
-  font-size: 8rem;
+  font-size: 25vw;
   margin: 0;
   color: var(--zombie-green-1);
-  line-height: 7rem;
+  line-height: 21vw;
 }
 
 #hero-slice{
